--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/diets
+spring.datasource.username=postgres
+spring.datasource.password=password
 
+spring.jpa.hibernate.ddl-auto = create
