--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto = validate
+
+spring.application.name = diets-microservice
+
+eureka.client.service-url.default-zone = http://localhost:8761/eureka
+spring.zipkin.baseUrl = http://localhost:9411/
