--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
+spring.application.name = diets-microservice
+server.port = 8080
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/diets
 spring.datasource.username=postgres
 spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto = validate
 
-spring.application.name = diets-microservice
+spring.cloud.config.enabled = false
 
 eureka.client.service-url.default-zone = http://localhost:8761/eureka
 spring.zipkin.baseUrl = http://localhost:9411/
