--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name = diets-microservice
-server.port = 8080
+server.port = 8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/diets
 spring.datasource.username=postgres
@@ -8,6 +8,9 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto = validate
 
 spring.cloud.config.enabled = false
+
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
 
 eureka.client.service-url.default-zone = http://localhost:8761/eureka
 spring.zipkin.baseUrl = http://localhost:9411/
