--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name = diets-microservice
-server.port = 8081
+server.port = 8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/diets
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://cloud-computing-postgres-do-user-8717336-0.b.db.ondigitalocean.com:25060/diets
+spring.datasource.username=diets-postgres-user-db
+spring.datasource.password=M1UCQstU1zqWMYyH
 
 spring.jpa.hibernate.ddl-auto = validate
 
