--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,6 @@ spring.datasource.password=M1UCQstU1zqWMYyH
 spring.jpa.hibernate.ddl-auto = validate
 
 spring.cloud.config.enabled = false
+spring.cloud.config.fail-fast = true
 
-eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=localhost
-
-eureka.client.service-url.default-zone = http://localhost:8761/eureka
 spring.zipkin.baseUrl = http://localhost:9411/
